fixing alignment issues

--- a/app/global.scss
+++ b/app/global.scss
@@ -92,3 +92,7 @@ footer a {
 .validation-error {
   color: red;
 }
+
+.amplify-radiogroup {
+  flex-wrap: wrap !important;
+}
